# jax-dna

./: .coveragerc  .gitignore  .readthedocs.yaml  APPLICATIONS.md  CONTRIBUTING.md  DNA28.md  LICENSE  PARAMETERIZATION.md  README.md  README.new.md  VISUALIZATION.md  codecov.yml  pyproject.toml  requirements.txt  tom.toml  tox.ini
docs/: Makefile  make.bat
examples/: compare_energy_calc.py  difftre_example.py  energy_functions.py  jaxmd_actor_prototype.py  jaxmd_sampler.py  optimization.py  optimization_notebook.html  optimization_notebook.ipynb  optimize_struc_diff_jaxmd2.py  optimize_structural_difftre.py  optimize_structural_difftre_jaxmd.py  optimize_structural_difftre_jaxmd2.py  optimizer_aot_prototype.py  optimizer_prototype.py  optimizer_prototype_actor.py  optimizer_prototype_aot.py  optimizer_prototype_serial.py  oxdna_simulator.py  plotly_logging_prototype.ipynb  run_total_optimization.py  run_total_optimization_difftre.py  run_total_optimization_oxdna_difftre.ipynb  run_total_optimization_oxdna_difftre.py  run_total_optimization_oxdna_difftre_multitraj.py  run_total_optimization_oxdna_difftre_simple.ipynb  run_total_optimization_oxdna_difftre_simple.py  simulator_actor.py  test_energies_comp.py
experiments/: align_z.py  benchmarking_8bp_duplex.py  check_alignment.py  check_oom_oxdna1.py  check_oom_oxdna2.py  check_oom_oxdna2_v2.py  check_oom_oxdna_oxdna2_v2.py  compute_grad_scaling.py  compute_grad_scaling_difftre.py  compute_grad_scaling_difftre_cpp.py  compute_time_scaling.py  find_hairpin_weights.py  find_tm_weights.py  find_tm_weights_1op.py  fit_duplex_tm.py  fit_sequence_structure.py  jacobian_analysis.py  joint_opt_ray.py  optimize_2ht_difftre.py  optimize_2ht_tc_rmse.py  optimize_basic_pull_lammps.py  optimize_biased_ratio.py  optimize_biased_simple.py  optimize_cgdna_ptwist.py  optimize_ext_mod_difftre_hybrid.py  optimize_ext_mod_difftre_hybrid_60bp_lp.py  optimize_ext_mod_difftre_hybrid_fe_only.py  optimize_finf.py  optimize_hairpin_tm_difftre_hybrid.py  optimize_hairpin_tm_difftre_hybrid_oxdna2.py  optimize_helical_dist.py  optimize_lp_difftre.py  optimize_lp_difftre_hybrid.py  optimize_lp_difftre_hybrid_oxdna2.py  optimize_lp_difftre_hybrid_oxdna2_60bp.py  optimize_lp_difftre_hybrid_oxdna2_60bp_ss.py  optimize_mech_lammps_ray.py  optimize_mech_lammps_ray_full.py  optimize_mech_lammps_ray_repeat_batch.py  optimize_mech_lammps_repeat_batch.py  (+44 more)
figures/: utils.py
jax_dna/: __init__.py
notes/: 1-10-23-notes.txt  1-11-23-notes.txt  1-17-23-notes.txt  10-11-23-notes.txt  10-19-23-notes.txt  10-23-23-notes.txt  10-3-23-notes.txt  10-4-23-notes.txt  11-1-23-notes.txt  11-30-23-notes.txt  12-17-22-notes.txt  12-2-22-notes.txt  12-20-22-notes.txt  12-21-22-notes.txt  12-22-22-notes.txt  12-7-22-notes.txt  2-10-23-notes.txt  2-12-25-notes.md  2-17-25-notes.md  2-28-23-notes.txt  2-3-23-notes.txt  2-6-23-notes.txt  2-8-23-notes.txt  3-19-23-notes.txt  3-22-23-notes.txt  3-30-23-notes.txt  4-12-23-notes.txt  4-3-23-notes.txt  4-4-23-michael-notes.txt  6-12-23-notes.txt  6-17-23-notes.txt  7-27-23-notes.txt  8-1-23-notes.txt  9-29-23-notes.txt  9-30-23-notes.txt  MARCH-MEETING.md  PARAMETERIZATION.md  VISUALIZATION.md
requirements/: all.txt  dev.txt  docs.txt  prd.txt  test.txt
scripts/: mps-daemon-started.sh  mps.sh
src/: bonded_energy.py  checkpoint.py  dynamic_nbrs.py  energy.py  energy_mini.py  forward.py  get_params.py  gradients.py  langevin.py  nn_energy.py  optimize_fene_params.py  optimize_no_optimize.py  optimize_params.py  optimize_params_array.py  optimize_params_array_fwd.py  optimize_params_forward.py  other_pairs_energy.py  pairwise_test.py  (+15 more)
(+1654 files in other folders)
